--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,44 @@
-body {
+body, html {
     margin: 0;
     font-family: sans-serif;
+    color: black;
 }
+
+h1, h4 {
+    text-align: center;
+}
+
 h1 {
-    color: darkgreen;
+    color: orangered;
+}
+
+.content {
+    margin: 0 auto;
+    width: 400px;
+}
+
+table, td, th {
+    border: 1px solid #aaa;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th {
+    height: 30px;
+}
+
+td {
+    text-align: center;
+    padding: 5px;
+}
+
+.form {
+    margin-top: 20px;
+}
+
+#content {
+    width: 70%;
 }
